<resources>
    <string name="app_name">ChatCS460</string>

    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_new_account1">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>

</resources>